<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/android:colorBackground"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="14sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/close"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="end"
                android:background="@drawable/close"
                android:contentDescription="@string/close"
                android:padding="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp">

            <Button
                android:id="@+id/openMap"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:background="@drawable/button"
                android:contentDescription="@string/openMap"
                android:drawableStart="@drawable/map"
                android:drawablePadding="3sp"
                android:text="@string/open"
                android:textColor="?attr/textColorInverse"
                android:textSize="14sp" />

            <Button
                android:id="@+id/submit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button"
                android:drawableStart="@drawable/file"
                android:drawablePadding="3sp"
                android:text="@string/submit"
                android:textColor="?attr/textColorInverse"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:text="@string/status"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:text="@string/setting_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/stamping_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:text="@string/stamping_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stamping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:text="@string/description"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/images_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:text="@string/images"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>
</ScrollView>